refactor App.jsx state and projectlist.jsx
refactor to use currentProject as string. refactor app's state to represent projects as object instead of array. refactor projectlist.jsx to read from object instead of array

--- a/frontend-react/.eslintrc.json
+++ b/frontend-react/.eslintrc.json
@@ -15,13 +15,14 @@
         "react"
     ],
     "rules": {
+        "no-console": "off",
         "indent": [
             "error",
             2
         ],
         "linebreak-style": [
-            "error",
-            "unix"
+            "warn",
+            "windows"
         ],
         "quotes": [
             "error",
