Fix functionality for adding notes and deleting projects

--- a/frontend-react/.eslintrc.json
+++ b/frontend-react/.eslintrc.json
@@ -22,7 +22,7 @@
         ],
         "linebreak-style": [
             "warn",
-            "windows"
+            "unix"
         ],
         "quotes": [
             "error",
